Some spacing corrections

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -89,7 +89,7 @@
     padding-left: 0px;
     padding-right: 0px;
     padding-top: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     position: relative;
 }
 .version_wrapper {
@@ -121,7 +121,7 @@
     width:75%;
     padding-left:22%;
     text-align: left;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-bottom: 10px;
     display:block;
 }
@@ -514,7 +514,7 @@ article {
         width: auto;
         position: relative;
         float: left;
-        padding-top:10px;
+        padding-top:40px;
         font-weight: bold;
         p {
             text-align: left;
